xpcom/base/nsTraceRefcnt.cpp
@@ -716,6 +716,19 @@ HashNumber(const void* aKey)
 }
 
 static void
+maybeUnregisterAndCloseFile(FILE*& aFile)
+{
+  if (!aFile) {
+    return;
+  }
+
+  MozillaUnRegisterDebugFILE(aFile);
+  fclose(aFile);
+  aFile = nullptr;
+}
+
+
+static void
 InitTraceLog()
 {
   if (gInitialized) {
@@ -731,7 +744,7 @@ InitTraceLog()
     RecreateBloatView();
     if (!gBloatView) {
       NS_WARNING("out of memory");
-      gBloatLog = nullptr;
+      maybeUnregisterAndCloseFile(gBloatLog);
       gLogLeaksOnly = false;
     }
   }
@@ -1270,18 +1283,6 @@ NS_LogCOMPtrRelease(void* aCOMPtr, nsISupports* aObject)
 void
 nsTraceRefcnt::Startup()
 {
-}
-
-static void
-maybeUnregisterAndCloseFile(FILE*& aFile)
-{
-  if (!aFile) {
-    return;
-  }
-
-  MozillaUnRegisterDebugFILE(aFile);
-  fclose(aFile);
-  aFile = nullptr;
 }
 
 void
